<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.google.gwt.site.webapp</groupId>
    <artifactId>gwt-site-webapp</artifactId>
    <version>2.0-SNAPSHOT</version>
    <packaging>war</packaging>

    <properties>
        <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <gwt.version>2.7.0</gwt.version>
        <gwtquery.version>1.4.2</gwtquery.version>

        <junit.version>4.11</junit.version>

        <!-- plugin -->
        <surefire-plugin.version>2.17</surefire-plugin.version>
        <compiler-plugin.version>3.1</compiler-plugin.version>
        <war-plugin.version>2.4</war-plugin.version>
    </properties>

    <dependencies>
        <!-- Test Dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- UI dependencies -->
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwt.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.gwtquery</groupId>
            <artifactId>gwtquery</artifactId>
            <version>${gwtquery.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-dev</artifactId>
            <version>${gwt.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt.site</groupId>
            <artifactId>gwt-site</artifactId>
            <version>${project.version}</version>
            <type>zip</type>
            <classifier>generated-site</classifier>
         </dependency>
    </dependencies>

    <build>
        <testResources>
            <testResource>
                <directory>${basedir}/src/test/java</directory>
            </testResource>
        </testResources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <excludes>
                        <exclude>**/*GwtTest.java</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>${war-plugin.version}</version>
                <configuration>
                    <!-- <archiveClasses>true</archiveClasses> -->
                    <webResources>
                        <!-- copy GWT source code to website for debugging -->
                        <resource>
                            <directory>${basedir}/target/extra/gwtproject/src</directory>
                            <targetPath>src</targetPath>
                        </resource>
                        <!-- copy sourcemaps to website for debugging -->
                        <resource>
                            <directory>${basedir}/target/extra/gwtproject/symbolMaps</directory>
                            <includes>
                                <include>*.json</include>
                            </includes>
                            <targetPath>src</targetPath>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>${gwt.version}</version>
                <executions>
                    <execution>
                        <configuration>
                            <testTimeOut>180</testTimeOut>
                            <includes>**/*GwtTest.java</includes>
                            <mode>htmlunit</mode>
                            <gen>gen</gen>
                            <extraJvmArgs>-Xss1024k -Xmx512M -XX:MaxPermSize=512m</extraJvmArgs>
                            <saveSource>true</saveSource>
                            <module>com.google.gwt.site.webapp.GWTProject</module>
                            <!--
                            Draft and pretty mode are turned on so that beginners can try out debugging
                            in their browser with no setup.
                            Please don't disable this; code size is less important.
                            -->
                            <draftCompile>true</draftCompile>
                            <style>PRETTY</style>
                        </configuration>
                        <goals>
                            <goal>compile</goal>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unpack-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>unpack-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeGroupIds>com.google.gwt.site</includeGroupIds>
                            <includeArtifactIds>gwt-site</includeArtifactIds>
                             <excludeTransitive>true</excludeTransitive>
                            <outputDirectory>${project.build.directory}/www/</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/www/gwtproject/</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.build.directory}/${project.artifactId}-${project.version}/gwtproject/</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
